# appimage-firstrun

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  conanfile.py
res/: CMakeLists.txt  appimage-firstrun.desktop  icons.qrc
res/xdg/: org.appimage.services.conf
src/: CMakeLists.txt  main.cpp
src/appimageservices-interfaces/: AppImageServicesInspector.cpp  AppImageServicesInspector.h  AppImageServicesInstaller.cpp  AppImageServicesInstaller.h  AppImageServicesLauncher.cpp  AppImageServicesLauncher.h  CMakeLists.txt
src/base/: AbstractFactory.h  AbstractInspector.cpp  AbstractInspector.h  AbstractInstaller.h  AbstractLauncher.cpp  AbstractLauncher.h  AppImageLauncher.cpp  AppImageLauncher.h  CMakeLists.txt  Command.h  exceptions.h  utils.cpp  utils.h
src/commands/: CMakeLists.txt  GuiCommandsFactory.cpp  GuiCommandsFactory.h  LaunchCommand.cpp  LaunchCommand.h  LaunchCommandAbstractAssistant.cpp  LaunchCommandAbstractAssistant.h  LaunchCommandAbstractUI.cpp  LaunchCommandAbstractUI.h  LaunchCommandAssistantDialog.cpp  LaunchCommandAssistantDialog.h  LaunchCommandAssistantDialog.ui
test/: AppImageLauncherTests.cpp  AppImageLauncherTests_Disable.sh  AppImageLauncherTests_KeepQtArgs.sh  CMakeLists.txt
test/commands/: CMakeLists.txt  LaunchCommandAssistantTests.cpp  LaunchCommandFakeAssistant.cpp  LaunchCommandFakeAssistant.h  LaunchCommandTest.cpp  LaunchCommandTestUi.cpp  LaunchCommandTestUi.h
test/test-base/: CMakeLists.txt  FakeInspector.cpp  FakeInspector.h  FakeInstaller.cpp  FakeInstaller.h  FakeLaunchCommand.cpp  FakeLaunchCommand.h  FakeLauncher.cpp  FakeLauncher.h  TestFactory.cpp  TestFactory.h
